--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <section class="about" id="about">
         <div class="about__logo">
           <div class="about__logo-background">
-            <img class="about__logo-image" src="/images/logo-white.svg">
+            <img class="about__logo-image" src="/images/logo-white.svg" alt="Логотип на черном фоне">
           </div>
         </div>
         <div class="about__column">
@@ -151,17 +151,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" src="/images/yt.svg">
+            <img class="footer__social-icon" src="/images/yt.svg" alt="Иконка Youtube">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" src="/images/vk.svg">
+            <img class="footer__social-icon" src="/images/vk.svg" alt="Иконка Вконтакте">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" src="/images/pinterest.svg">
+            <img class="footer__social-icon" src="/images/pinterest.svg" alt="Иконка Pinterest">
           </a>
         </li>
       </ul>
