--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navigation-header">
-        <ul class="menu_list header__links-list">
+      <nav class="header__menu">
+        <ul class="links_list header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link link_active">главная</a>
+            <a class="header__link link_active" href="#0">главная</a>
           </li>
-          <li class="header__links-list-item header__links-list-with-bullit">
-            <a class="header__link" href="#lots">посмотреть лоты</a>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">посмотреть лоты</a>
           </li>
-          <li class="header__links-list-item header__links-list-with-bullit">
-            <a class="header__link" href="#about">об аукционе</a>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <a class="header__logo">
+      <a class="header__logo" href="#0">
         <img class="header__logo-image" src="images/logo-black.svg" alt="Логотип аукциона"/>
       </a>
       <address class="address header__address">
-        <a class="header__address-phone" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="header__address-email" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="header__address-text">наб. Принсенграхт 263- 265, Амстердам</p>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
       <section class="cover">
         <div class="overlay">
         </div>
-          <h1 class="cover__title">
-            <span class="aligned-text_left letter-spacing-extended no-letter-spacing">оно</span>
-            <span class="aligned-text_center letter-spacing-extended no-letter-spacing">тебе</span>
-            <span class="aligned-text_right letter-spacing-extended no-letter-spacing">надо</span>
-          </h1>
+        <h1 class="cover__title">
+          <span class="aligned-text_left letter-spacing-extended no-letter-spacing">оно</span>
+          <span class="aligned-text_center letter-spacing-extended no-letter-spacing">тебе</span>
+          <span class="aligned-text_right letter-spacing-extended no-letter-spacing">надо</span>
+        </h1>
         <div class="cover__description">
           <p class="cover__description-text">
             аукцион вещей, в которые никто не верил
@@ -51,7 +51,7 @@
           </button>
         </div>
       </section>
-      <section class="lots" id="lots">
+      <section class="lots">
         <div>
             <h2 class="lots__heading">лоты</h2>
             <ul class="lots__card-list">
@@ -101,7 +101,7 @@
             <a class="lots__look-more-link" href="#0">посмотреть больше</a>
         </div>
       </section>
-      <section class="about" id="about">
+      <section class="about">
         <div class="about__logo">
           <div class="about__logo-background">
             <img class="about__logo-image" src="/images/logo-white.svg" alt="Логотип на черном фоне">
@@ -116,8 +116,7 @@
               Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
             </p>
             <p class="about__text-second-paragraph">
-              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
             </p>
           </div>
         </div>
@@ -130,19 +129,19 @@
         <p class="footer__address-text">наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
-        <ul class="menu_list footer__menu-list">
+        <ul class="links_list footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link link_active">
+            <a class="footer__menu-link link_active" href="#0">
               главная
             </a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link">
+            <a class="footer__menu-link" href="#0">
               посмотреть лоты
             </a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link">
+            <a class="footer__menu-link" href="#0">
               об аукционе
             </a>
           </li>
@@ -150,17 +149,17 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a class="footer__social-link">
+          <a class="footer__social-link" href="#0">
             <img class="footer__social-icon" src="/images/yt.svg" alt="Иконка Youtube">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link">
+          <a class="footer__social-link" href="#0">
             <img class="footer__social-icon" src="/images/vk.svg" alt="Иконка Вконтакте">
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a class="footer__social-link">
+          <a class="footer__social-link" href="#0">
             <img class="footer__social-icon" src="/images/pinterest.svg" alt="Иконка Pinterest">
           </a>
         </li>
