--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css">
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <header class="header">
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <a class="header__logo" href="#0">
-        <img class="header__logo-image" src="images/logo-black.svg" alt="Логотип аукциона"/>
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип аукциона"/>
       </a>
       <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -104,7 +104,7 @@
       <section class="about">
         <div class="about__logo">
           <div class="about__logo-background">
-            <img class="about__logo-image" src="/images/logo-white.svg" alt="Логотип на черном фоне">
+            <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип на черном фоне">
           </div>
         </div>
         <div class="about__column">
@@ -150,17 +150,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="/images/yt.svg" alt="Иконка Youtube">
+            <img class="footer__social-icon" src="./images/yt.svg" alt="Иконка Youtube">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="/images/vk.svg" alt="Иконка Вконтакте">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="Иконка Вконтакте">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link" href="#0">
-            <img class="footer__social-icon" src="/images/pinterest.svg" alt="Иконка Pinterest">
+            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Иконка Pinterest">
           </a>
         </li>
       </ul>
