--- a/index.html
+++ b/index.html
@@ -14,13 +14,19 @@
       <nav class="header__menu">
         <ul class="links_list header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link link_active" href="#0">главная</a>
+            <a class="header__link link_active" href="#0">
+              главная
+            </a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#0">посмотреть лоты</a>
+            <a class="header__link" href="#0">
+              посмотреть лоты
+            </a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#0">об аукционе</a>
+            <a class="header__link" href="#0">
+              об аукционе
+            </a>
           </li>
         </ul>
       </nav>
