--- a/index.html
+++ b/index.html
@@ -50,15 +50,9 @@
         <div class="overlay">
         </div>
         <h1 class="cover__title">
-          <span class="aligned-text_left letter-spacing-extended no-letter-spacing">
-            оно
-          </span>
-          <span class="aligned-text_center letter-spacing-extended no-letter-spacing">
-            тебе
-          </span>
-          <span class="aligned-text_right letter-spacing-extended no-letter-spacing">
-            надо
-          </span>
+          <span class="aligned-text_left letter-spacing-extended">оно</span>
+          <span class="aligned-text_center letter-spacing-extended">теб<span class="no-letter-spacing">е</span></span>
+          <span class="aligned-text_right letter-spacing-extended">над<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
@@ -132,10 +126,10 @@
             Об аукционе
           </h2>
           <div class="about__text">
-            <p class="about__text-first-paragraph">
+            <p class="about__text-intro-paragraph">
               Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
             </p>
-            <p class="about__text-second-paragraph">
+            <p class="about__text-misunderstood-masterpieces-paragraph">
               Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
             </p>
           </div>
